# cli

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: config.rs  main.rs
src/commands/: dev.rs  list.rs  logs.rs  mod.rs  open.rs  restart.rs  status.rs  stop.rs
src/discovery/: mod.rs  ports.rs  services.rs
src/runner/: mod.rs  output.rs  process.rs
src/state/: mod.rs  tracker.rs
