[package]
name = "groo-cli"
version = "0.1.0"
edition = "2024"
description = "A CLI tool for managing and running dev servers in monorepos"
license = "MIT"

[[bin]]
name = "groo"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
console = "0.16.1"
dialoguer = { version = "0.12.0", features = ["fuzzy-select"] }
dirs = "6.0.0"
libc = "0.2.178"
open = "5.3.3"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full", "process", "signal"] }
toml = "0.9.8"
walkdir = "2.5.0"
